// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bin != 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "!=",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin !== 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "!==",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin % 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "%",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin & 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "&",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin && 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "&&",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin * 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "*",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin ** 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "**",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin ** right-associative 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
        "right": Bin {
          "kind": "bin",
          "left": Variable {
            "curly": false,
            "kind": "variable",
            "name": "b",
          },
          "right": Variable {
            "curly": false,
            "kind": "variable",
            "name": "c",
          },
          "type": "**",
        },
        "type": "**",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin + 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "+",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin . 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": ".",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin / 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "/",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin < 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "<",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin << 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "<<",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin <= 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "<=",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin <=> 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "<=>",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin == 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "==",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin === 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "===",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin > 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": ">",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin >= 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": ">=",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin >> 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": ">>",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin ?? (php < 7) 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": RetIf {
        "falseExpr": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "kind": "retif",
        "test": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "trueExpr": undefined,
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [
    Error {
      "expected": "EXPR",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '?' on line 1",
      "token": "'?'",
    },
    Error {
      "expected": ":",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '$var' (T_VARIABLE), expecting ':' on line 1",
      "token": "'$var' (T_VARIABLE)",
    },
  ],
  "kind": "program",
}
`;

exports[`bin ?? 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "??",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin ?? right-associative 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
        "right": Bin {
          "kind": "bin",
          "left": Variable {
            "curly": false,
            "kind": "variable",
            "name": "b",
          },
          "right": Variable {
            "curly": false,
            "kind": "variable",
            "name": "c",
          },
          "type": "??",
        },
        "type": "??",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin ^ 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "^",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin | 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "|",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin || 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "||",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin - 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "-",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin and 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "and",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin assign 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": Bin {
          "kind": "bin",
          "left": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          "right": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          "type": "+",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin instanceof 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Name {
          "kind": "name",
          "name": "MyClass",
          "resolution": "uqn",
        },
        "type": "instanceof",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin instanceof parent 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": ParentReference {
          "kind": "parentreference",
          "raw": "parent",
        },
        "type": "instanceof",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin instanceof self 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": SelfReference {
          "kind": "selfreference",
          "raw": "self",
        },
        "type": "instanceof",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin instanceof static 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": StaticReference {
          "kind": "staticreference",
          "raw": "static",
        },
        "type": "instanceof",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin instanceof variable 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "type": "instanceof",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin multiple 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": Bin {
          "kind": "bin",
          "left": Bin {
            "kind": "bin",
            "left": Variable {
              "curly": false,
              "kind": "variable",
              "name": "var",
            },
            "right": Variable {
              "curly": false,
              "kind": "variable",
              "name": "var",
            },
            "type": "+",
          },
          "right": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          "type": "+",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin multiple instanceof static 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Bin {
          "kind": "bin",
          "left": Variable {
            "curly": false,
            "kind": "variable",
            "name": "foo",
          },
          "right": StaticReference {
            "kind": "staticreference",
            "raw": "static",
          },
          "type": "instanceof",
        },
        "right": Bin {
          "kind": "bin",
          "left": Variable {
            "curly": false,
            "kind": "variable",
            "name": "bar",
          },
          "right": SelfReference {
            "kind": "selfreference",
            "raw": "self",
          },
          "type": "instanceof",
        },
        "type": "&&",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin or 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "or",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin parens 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "parenthesizedExpression": true,
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "type": "+",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin parens around \`and\` 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": Bin {
          "kind": "bin",
          "left": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          "parenthesizedExpression": true,
          "right": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          "type": "and",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin parens around \`or\` 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": Bin {
          "kind": "bin",
          "left": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          "parenthesizedExpression": true,
          "right": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          "type": "or",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin parens around \`xor\` 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": Bin {
          "kind": "bin",
          "left": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          "parenthesizedExpression": true,
          "right": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          "type": "xor",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`bin xor 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Bin {
        "kind": "bin",
        "left": Variable {
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
        "right": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "type": "xor",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
